[package]
name = "linker-test-kept"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { git = "https://github.com/ealmloff/dioxus", branch = "hashless-assets" }
libby = { path = "./libby" }

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
incremental = false

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
# Strip breaks assets since we rely on symbols now
# strip = true
